--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,8 @@
     </div>
     <form action="/login" th:action="@{/login}" method="post">
         <p>username : <input type="text" name="username" /></p>
-        <p>password : <input type="password" name="password"/></p>
+        <p>password : <input type="password" name="password" /></p>
+        <p>remember : <input type="checkbox" name="remember-me" />></p>
         <p><input type="submit" value="Login" /></p>
     </form>
 </body>
